<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Sudoku</string>
    <string name="hello_world">This is Sudoku Game!!!</string>
    <string name="action_settings">Settings</string>

    <string name="main_title">My Sudoku Game</string>
    <string name="cont_label">Continue...</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About Me</string>
    <string name="exit_label">Exit Game</string>
    <string name="about_text"><b>Sudoku</b> This is my first android game.</string>

    <string name="settings_label">Setting</string>
    <string name="settings_title">My Sudoku Settings</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play Background Music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show Hints</string>

    <string name="new_game_title">Select Mode</string>
    <string name="new_easy">Easy</string>
    <string name="new_medium">Medium</string>
    <string name="new_hard">Hard</string>

    <string name="game_title">My Sudoku Game</string>
    <string name="no_moves_label">Can't insert number in this tile!!!</string>
    <string name="keypad_title">Keypad</string>

</resources>
