<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <TextView
        android:text="@string/main_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/cont_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/new_game_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/about_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/exit_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
